--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://lucasroqe.github.io/repo-fatec/",
+  "homepage": "https://lucasroqe.github.io/port-fatec/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
